--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -43,7 +43,7 @@
 
 }
 
-.gpt3__navbar-links_container a{
+.gpt3__navbar-links_container  a{
     margin-right: 2rem;
 }
 
@@ -106,20 +106,24 @@
     text-align: end;
     background:var(--color-footer);
     padding: 2rem;
-    position: absolute;
-    right: 0;
-    top: 40px;
+    position: fixed;
+    right: 40px;
+    top: 80px;
     margin-top: 1rem;
     min-width: 210px;
     border-radius: 5px;
     box-shadow: 0px 0px 5px rgba(0,0, 0,0.2);
+    z-index: 10;
 }
 
-.gpt3__navbar-menu_container-links{
+.gpt3__navbar-menu_container-links {
     display: flex;
     flex-direction: column;
-    
-}
+    /* position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); */
+  }
 
 .gpt3__navbar-menu_container-links a{
     padding-top: 1rem;
@@ -127,6 +131,7 @@
     line-height: 2rem;
     font-weight:800;
     color: #FFFFFF;
+    
 }
 
  
